# stream_manager

./: Cargo.toml  README.md  templates
frontend/: Cargo.toml  template.aml
frontend/src/: events.rs  lib.rs  main.rs
frontend/src/components/: font.rs  hello_queue.rs  mod.rs  theme.rs  twitch_ad.rs
frontend/templates/: ads.aml  font.aml  hello_queue_template.aml  index.aml  theme.aml
src/: config.rs  hello_queue.rs  lib.rs  main.rs  state.rs
