[package]
name = "stream_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
eyre = "0.6.12"
tokio = { version = "1.37.0", features = ["net", "rt-multi-thread", "macros"] }
twitch_api = { version = "0.7.0-rc.7", features = ["eventsub", "reqwest", "helix"] }
twitch_events_listener = { path = "../twitch_events_listener/" }
change_helix_theme = { path = "../change_helix_theme/" }
change_alacritty_font = { path = "../change_alacritty_font/" }

