[package]
name = "stream_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
eyre = "0.6.12"
tokio = { version = "1.37.0", features = ["net", "rt-multi-thread", "macros"] }
twitch_events_listener = { path = "../twitch_events_listener/" }
change_helix_theme = { path = "../change_helix_theme/" }
change_alacritty_font = { path = "../change_alacritty_font/" }
twitch_api = { features = ["helix", "reqwest", "eventsub"], git = "https://github.com/twitch-rs/twitch_api", rev = "788c4ea" }

[patch.crates-io.twitch_types]
git = "https://github.com/twitch-rs/twitch_api"
# path = "../../forks/twitch_api/twitch_types"
rev = "788c4ea" # only if you pinned the repo to a specific revision


